--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/node": "^15.12.4",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
+    "@types/react-redux": "^7.1.16",
+    "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
     "formik": "^2.2.9",
     "react": "^17.0.1",
